--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -89,3 +89,45 @@
     border-radius: .5rem;
     box-shadow: 0 0 5 rgba(0, 0, 0, 0.2);
 }
+
+.gpt3__navbar-menu_container p {
+    margin: 1.6rem 0;
+}
+
+.gpt3__navbar-menu_container-links-sign {
+    display: none;
+}
+
+@media screen and (max-width: 1050px) {
+    .gpt3__navbar-links_container {
+        display: none;
+    }
+
+    .gpt3__navbar-menu {
+        display: flex;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .gpt3__navbar {
+        padding: 3.2rem 6.4rem;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .gpt3__navbar {
+        padding: 3.2rem;
+    }
+
+    .gpt3__navbar-sign {
+        display: none;
+    }
+
+    .gpt3__navbar-menu_container {
+        top: 2rem;
+    }
+
+    .gpt3__navbar-menu_container-links-sign {
+        display: block;
+    }
+}
