--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -23,7 +23,7 @@
 
 .gpt3__navbar-links_container {
     display: flex;
-    /* flex-direction: row; */
+    flex-direction: row;
 }
 
 .gpt3__navbar-sign {
