--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -105,16 +105,60 @@
 }
 
 .gpt3__header-image img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 @media screen and (max-width: 1050px) {
-    .gpt3__header-image {
+    .gpt3__header {
         flex-direction: column;    
     }
 
     .gpt3__header-content {
         margin: 0 0 4.8rem;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .gpt3__header h1 {
+        font-size: 4.8rem;
+        line-height: 6rem;
+    }
+
+    .gpt3__header p {
+        font-size: 1.6rem;
+        line-height: 2.4rem;
+    }
+
+    .gpt3__header-content__people {
+        flex-direction: column;
+    }
+
+    .gpt3__header-content__people p {
+        margin: 0;
+    }
+
+    .gpt3__header-content__input input,
+    .gpt3__header-content__input button {
+        font-size: 1.6rem;    
+        line-height: 2.4rem;
+    }
+}
+
+@media screen and (max-width: 490px) {
+    .gpt3__header h1 {
+        font-size: 3.6rem;
+        line-height: 4.8rem;
+    }
+
+    .gpt3__header p {
+        font-size: 1.4rem;
+        line-height: 2.4rem;
+    }
+
+    .gpt3__header-content__input input,
+    .gpt3__header-content__input button {
+        font-size: 1.2rem;    
+        line-height: 1.6rem;
     }
 }
