--- a/src/containers/whatGPT3/whatGPT3.css
+++ b/src/containers/whatGPT3/whatGPT3.css
@@ -63,3 +63,50 @@
     flex-wrap: wrap;
     margin-top: 3.2rem;
 }
+
+/* Customizing feature component as per needs */
+.gpt3__whatgpt3-container .gpt3__features-container__feature {
+    flex: 1;
+    margin: 1.6rem;
+    min-width: 21rem;
+    display: unset;
+    flex-direction: column;
+}
+
+.gpt3__whatgpt3-container .gpt3__features-container_feature-text {
+    margin-top: .8rem;
+}
+
+@media screen and (max-width: 850px) {
+    .gpt3__whatgpt3-heading {
+        flex-direction: column;
+        align-items: flex-start;
+        margin-bottom: 0;
+    }
+
+    .gpt3__whatgpt3-heading p {
+        margin-top: 1.6rem;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .gpt3__whatgpt3-feature .gpt3__features-container__feature {
+        flex-direction: column;
+    }
+
+    .gpt3__whatgpt3-feature .gpt3__features-container_feature-text {
+        margin-top: .8rem;
+    }
+
+    .gpt3__whatgpt3-heading h1 {
+        font-size: 2.8rem;
+        line-height: 4rem;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .gpt3__whatgpt3-container .gpt3__features-container__feature {
+        margin: 1.6rem 0;
+        min-width: 100%;
+    }
+}
