--- a/src/containers/possibility/possibility.css
+++ b/src/containers/possibility/possibility.css
@@ -36,9 +36,31 @@
 }
 
 .gpt3__possibility-content h1 {
-    
+    font-family: var(--font-family);    
+    font-weight: 800;
+    font-size: 3.4rem;
+    line-height: 4.5rem;
+    margin: 1.6rem 0;
 }
 
 .gpt3__possibility-content p {
+    font-family: var(--font-family);    
+    font-size: 1.6rem;
+    line-height: 3rem;
+    color: var(--color-text);
+    margin-bottom: 3.2rem;
+}
 
+@media screen and (max-width: 950px) {
+    .gpt3__possibility {
+        flex-direction: column;
+    }
+
+    .gpt3__possibility-image {
+        margin: 1.6rem 0;
+    }
+
+    .gpt3__possibility-content {
+        margin-top: 3.2rem;
+    }
 }
